--- a/css/formulaire.css
+++ b/css/formulaire.css
@@ -20,7 +20,7 @@
 
 .myFormularContent {
     width: 30vw;
-    height: 450px;
+    height: 500px;
     padding: 20px;
     border: 0.5px solid rgb(188, 186, 186) ;
     border-radius: 10px;
@@ -67,6 +67,7 @@
     margin-top: 5vw;
     padding-right: 5vw;
     height: 70vh;
+    margin-bottom: 50px;
 }
 
 
