--- a/css/header.css
+++ b/css/header.css
@@ -4,7 +4,11 @@ header {
     align-items: center;
     width: auto;
     padding: 1vw;
-    height: 5vw;
+    height: 10vh;
+    background-color:#4C27E0 ;
+    color: white;
+    -webkit-box-shadow: 0px 0px 15px -7px rgba(0,0,0,0.75); 
+    box-shadow: 0px 0px 15px -7px rgba(0,0,0,0.75);
 }
 
 .headertitle {
@@ -13,17 +17,17 @@ header {
 
 @media screen and (max-width:1106px) {
     header {
-        margin-top: 2vw;
+        padding-top: 2vw;
     }
 }
 
 @media screen and (max-width:855px) {
     header {
-        margin-top: 2vw;
+        padding-top: 2vw;
     }
 }
 @media screen and (max-width:615px) {
     header {
-        margin-top: 3vw;
+        padding-top: 3vw;
     }
 }
