--- a/css/nav.css
+++ b/css/nav.css
@@ -1,28 +1,29 @@
-nav {
-    border-right: 3px solid #1a8dc2;
+.myNav {
+    border-right: 3px solid #c9c9c94e;
     width: 20vw;
-    padding-left:20px;
     color: white;
     display: flex;
     flex-direction: column;
+/*  background-color: #4C27E0;*/
 }
 
-nav > h1 {
+.myNav > h1 {
     margin-bottom: 20px;
     margin-top: 20px;
     font-size:2vw;
 }
 
-nav > ul {
-    text-decoration: none;
-    list-style-type: none;
+.myNav > ul {
+    padding: 5%;
 }
 
-nav>ul>a {
-    font-size: 1.4vw;
+.myNav>ul>li>a {
+    font-size: 90%;
     line-height: 5vh;
     color: white;
     text-decoration: none;
+    color: #FF754A;
+    font-weight: bolder;
 }
 
 .user-avatar > img {
