--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,13 @@
 @import url("header.css");
 @import url("avatar.css");
 @import url("login.css");
+@import url("profile_page.css");
 
 *{
     margin: 0;
     padding: 0;
 }
 
-#sign_in {
-    backdrop-filter: blur(10px);
-}
 .text-primary{
     color: #4C27E0;
 }
@@ -30,17 +28,25 @@
     color: #59B23E;
 }
 
+.icon-color-gray {
+    color: #9B9B9B;
+}
 
 .border-primary{
     border-color: #3C2BFA;
 }
 
-button :hover {
-    background-color: #FF754A;
+.border-secondary {
+    border: 2px solid #e2e3e5;
 }
+
 
 .icon-color-w{
     color: #fff;
+}
+
+.middle-nav-hover :hover {
+    background-color: #FF754A;
 }
 
 .no-outline {
@@ -49,6 +55,10 @@ button :hover {
 
 .bg-primary{
     background-color: #4C27E0; 
+}
+
+.bg-gray{
+    background-color: #FF754A; 
 }
 
 .w-20{
@@ -70,6 +80,9 @@ button :hover {
 .h-40{
     height: 40px;
 }
+.h-60{
+    height: 60px;
+}
 
 .cursor-pointer {
     cursor: pointer;
@@ -77,6 +90,10 @@ button :hover {
 
 .bg-black-transparent{
     background-color: rgba(0, 0, 0, 0.5);
+}
+
+.profile-content {
+    min-height: 66vh;
 }
 
 @media screen and (max-width: 1199px) {
