--- a/css/style.css
+++ b/css/style.css
@@ -89,9 +89,17 @@
     cursor: pointer;
 }
 
+
 .bg-black-transparent{
     background-color: rgba(0, 0, 0, 0.5);
 }
+
+.bg-shadow {
+    -webkit-box-shadow: 0px 2px 39px 40px rgba(0,0,0,0.12); 
+    box-shadow: 0px 2px 39px 40px rgba(0,0,0,0.12);
+}
+
+
 
 .profile-content {
     min-height: 66vh;
@@ -110,6 +118,11 @@
         height: calc(100vh - 262.19px);
         overflow: auto;
     }
+    #floating-form-id {
+        margin-bottom: 25vh;
+        width:60vw;
+    }
+
 }
 
 @media screen and (max-width: 409px){
